drupal/sites/all/themes/antistatique/assets/sass/layout/footer.scss
/*doc
---
title: Footer
name: a-footer
category: Layout - Footer
---

```html_example
    <footer class="footer">
        <div class="footer-content">
            <hr>
            <div class="container">
                <div class="row">
                    <div class="col-xs-12 text-center">
                        <p><strong><a href="#">Lausanne</a></strong> & <strong><a href="#">Geneva</a></strong></p>
                        <p>
                            <a href="tel:0041216236303" class="btn btn-primary">+41 21 623 63 03</a>
                        </p>
                        <p><a href="mailto:hello@antistatique.net">hello@antistatique.net</a></p>
                        <ul class="list-inline">
                            <li><a href="#we">We</a></li>
                            <li><a href="#we">Work</a></li>
                            <li><a href="#we">With you</a></li>
                            <li>/</li>
                            <li><a href="#we">Inprint</a></li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </footer>
```

*/
.footer{
  border-top: 1px solid $dust;
  background: url('../svg/logo.svg') no-repeat;
  background-size: 400px;
  background-position: -150px 50%;
  position: relative;
  @media only screen and (max-width: $screen-sm-max) {
    padding-top: 80px;
    background-position: -120px 20px;
    background-size: 300px;
  }
  &:after{
    content:"";
    position: absolute;
    right: -250px;
    top: 50%;
    margin-top: -40px;
    background: url('../svg/logo.svg') no-repeat;
    width: 400px;
    height: 80px;
    @media only screen and (max-width: $screen-sm-max) {
      width:300px;
      right: -180px;
      top: 20px;
      margin-top: 0;
    }
  }


  a:not(.btn){
    color: $midnight-blue;
  }
}

